# assistantmanager

./: .gitignore  README.md  astmgr.yaml.sample  pyproject.toml  pytest.ini  requrements.txt
.ropeproject/: config.py
astmgr/: magics.py  shell.py  utils.py
src/astmgr/: __init__.py  magics.py  magics_test.py  prompt.py  shell.py
