[tool.poetry]
name = "assistantmanager"
version = "0.1.0"
description = "Assistant manager will help you manage."
authors = ["Steven Joseph <steven@stevenjoseph.in>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jira = "^3.4.1"
python-gitlab = "^3.9.0"
docopt = "^0.6.2"
python-box = "^6.0.2"
PyYAML = "^6.0"
tabulate = "^0.8.10"
jmespath = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.9"
pytest = "^7.1.3"
mock = "^4.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
